[tool.poetry]
name = "safeflax"
version = "0.1.0"
description = ""
authors = ["Cody Lewis <hello@codymlewis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
safetensors = "^0.4.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
jedi = "^0.19.1"
flake8 = "^6.1.0"
python-lsp-server = "^1.8.0"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
